kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/invalid/025_weaving_in_kermeta_aspect8.kmt
/* $Id: 025_weaving_in_kermeta_aspect7.kmt,v 1.1 2007/02/16 07:42:36 dvojtise Exp $ */

// Type checking of kermeta weavinf

package weavinginvalidtest7;

using kermeta::standard
//------------------------------
// Base classes
//------------------------------
class A {
	operation amethod() : A[0..*] is abstract
}



//------------------------------
// Aspect classes
//------------------------------

@aspect "true"
class A {
	operation amethod() : A is do
		result := OrderedSet<A>.new
	end

}

/* END OF FILE */